--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,11 +13,7 @@ post_class: post-template
     {% if page.author %}
     <div class="d-flex align-items-center mt-4">
         <div>
-            {% if author.avatar %}
-            <img class="author-thumb" src="{{site.baseurl}}/{{ author.avatar }}" alt="{{ author.display_name }}">
-            {% else %}
-            <img class="author-thumb" src="https://www.gravatar.com/avatar/{{ author.gravatar }}?s=250&d=mm&r=x" alt="{{ author.display_name }}">
-            {% endif %}
+            <img class="author-thumb" src="{{ author.image }}" alt="{{ author.display_name }}">
         </div>            
         <div>
         Written by <a target="_blank" class="text-dark" href="{{ author.web }}">{{ author.display_name }}</a> on 
